...
          value: 'settings',
          child: Row(
            children: [
              Icon(Icons.settings_outlined, color: AppTheme.darkGray, size: 20),
              SizedBox(width: 12),
              Text(
                'Paramètres',
                style: TextStyle(
                  color: AppTheme.darkGray,
                  fontWeight: FontWeight.w500,
                ),
              ),
            ],
...
          value: 'help',
          child: Row(
            children: [
              Icon(Icons.help_outline, color: AppTheme.darkGray, size: 20),
              SizedBox(width: 12),
              Text(
                'Aide',
                style: TextStyle(
                  color: AppTheme.darkGray,
                  fontWeight: FontWeight.w500,
                ),
              ),
            ],
...
