...
          fontWeight: FontWeight.w800,
          color: Color(0xFF14213D),
          letterSpacing: 4,
        ),
        textCapitalization: TextCapitalization.characters,
        decoration: const InputDecoration(
          hintText: 'AB-123-CD',
          hintStyle: TextStyle(
            color: Color(0xFFB9CCFF),
            fontSize: 24,
            fontWeight: FontWeight.w800,
            letterSpacing: 4,
          ),
...
